@@ -1,4 +1,6 @@
 ==========================================================================
+7-20-15  : The mayor of Grimhaven has rescinded the hospice tax.
+
 7-02-15  : Times now display properly as 'X:00' instead of 'X: 0'.
 
 6-30-15  : Fixed a bug where renting with a persistent follower (pet)
